<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".presentation.InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="26dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/information_fragment_about_app"
            android:textColor="?attr/textColor"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@null"
            android:src="@drawable/hand_logo_ortin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:gravity="center_horizontal"
            android:text="@string/information_fragment_app_description"
            android:textColor="?attr/descriptionColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/web_app_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            android:autoLink="web"
            android:background="@drawable/url_button"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/information_fragment_web_app_button"
            android:textColor="?attr/accentColor" />

        <Button
            android:id="@+id/app_github_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            android:autoLink="web"
            android:background="@drawable/url_button"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/information_fragment_app_github_button"
            android:textColor="?attr/accentColor" />

        <Button
            android:id="@+id/donate_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/url_button"
            android:clickable="true"
            android:text="@string/information_fragment_donate_button"
            android:textColor="?attr/accentColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:text="@string/information_fragment_about_team"
            android:textColor="?attr/textColor"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/developCardsRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</ScrollView>
